--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,33 @@
 version: '3'
 services:
   postgres:
-    image: postgres
-    ports:
-      - "5434:5432"
-    environment:
-      POSTGRES_DB: products
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-  spring:
+    image: postgres:latest
+    env_file:
+      - postgres.env
+    networks:
+      - app_network
+    volumes:
+      - postgres_volume:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready" ]
+      interval: 10s
+      timeout: 10s
+      retries: 5
+  app:
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "8080:8080"
+    env_file:
+      - app.env
+    networks:
+      - app_network
     depends_on:
       - postgres
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/products
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: postgres
-      SPRING_JPA_DATABASE-PLATFORM: org.hibernate.dialect.PostgreSQLDialect
-      SPRING_JPA_SHOW-SQL: true
-      SPRING_HIBERNATE_DDL-AUTO: update
+    ports:
+      - '8080:8080'
+networks:
+  app_network:
+    driver: bridge
+volumes:
+  postgres_volume:
+    driver: local
